--- a/aula25/ex25.html
+++ b/aula25/ex25.html
@@ -44,5 +44,23 @@
             evilin
         </li>
     </ul>
+    <h2>
+        Minhas linguagens favoritas
+    </h2>
+    <ol>
+        <li>Antigas</li>
+        <ol>
+            <li>Clipper</li>
+            <li>Visual Basic</li>
+            <li>Fortran</li>
+        </ol>
+        <li>Novas</li>
+        <ol>
+            <li>PHP</li>
+            <li>Phyton</li>
+            <li>JavaScript</li>
+        </ol>
+    </ol>
+
 </body>
 </html>
