--- a/aula27/ex27.html
+++ b/aula27/ex27.html
@@ -10,5 +10,6 @@
     <h1>Usando links externos</h1>
     <p>Acesse o <a href="https://youtube.com" target="_blank" rel="external">youtube</a> em uma nova janela!</p>
     <p>Acesse o <a href="https://youtube.com">youtube</a> sobrepondo a janela desse site!</p>
+    <p>Está é a primeira página do site. Se você quiser pode acessar também a <a href="pag02.html" rel="next">segunda página</a>!</p>
 </body>
 </html>
