--- a/modulo2/ex9.html
+++ b/modulo2/ex9.html
@@ -10,14 +10,14 @@
 <body>
     <h1 id="principal">Criando site com HTML e CSS</h1>
     <h1>HTML</h1>
-    <h2>Módulo 1 - HTML</h2>
+    <h2 class="modulo1">Módulo 1 - HTML</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, eum illum ipsum, cum ratione pariatur aliquam, soluta porro nisi obcaecati dolorum adipisci nihil molestias similique esse fugit repudiandae. Amet, assumenda?</p>
-    <h2>Módulo 2 - HTML</h2>
+    <h2 class="modulo2">Módulo 2 - HTML</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus cumque a natus sunt, assumenda deserunt id dolorem aperiam voluptates, quisquam veniam perferendis nemo rem inventore, est esse. Modi, vero nemo?</p>
     <h1>CSS</h1>
-    <h2>Módulo 1 - CSS</h2>
+    <h2 class="modulo1">Módulo 1 - CSS</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni delectus earum harum a modi aliquam exercitationem ullam quidem iusto libero saepe, debitis odit soluta est voluptatum similique in ea minus.</p>
-    <h2>Módulo 2 - HTML</h2>
+    <h2 class="modulo2">Módulo 2 - HTML</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse deleniti vitae totam ipsum aspernatur asperiores, soluta cupiditate numquam non ullam quaerat sed magni tempore, dignissimos exercitationem facilis nemo? Aperiam, adipisci!</p>
 </body>
 </html>
