Atualização 2 do site
Adicionado todos os conteúdos, falta estilizar a página e outros mínimos detalhes.

--- a/desafios/desafio10-modulo2/desafio10.html
+++ b/desafios/desafio10-modulo2/desafio10.html
@@ -29,6 +29,47 @@
             <p>
                 A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o Inkscape (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.    
             </p>
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/dan-droids-pq.png" type="image/png">
+                <img id="imagem" src="imagens/dan-droids.png" alt="Primeiro mascote">
+            </picture>
+            <p>
+                Essa primeira versão bizarra até foi batizada em homenagem ao seu criador: seriam os Dandroids.
+ 
+            </p>
+            <h2>Surge um novo mascote</h2>
+            <p>
+                A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa Irina Blok, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável. 
+            </p>
+            <picture>
+                <source media="(max-width: 750px)" srcset="imagens/irina-blok-pq.jpg" type="image/jpg">
+                <img id="imagem" src="imagens/irina-blok.jpg" alt="Foto da Irina">
+            </picture>
+            <p>
+                A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O desenho também deveria gerar identificação rápida com quem o olha. Surgiu então o Bugdroid, o novo mascote do Android.
+            </p>
+            <picture>
+                <img src="imagens/bugdroid.png" alt="Bugdroid">
+            </picture>
+        </article>
+        <article id="sec">
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi odio, impedit error explicabo saepe consequatur ex, accusantium assumenda commodi dignissimos corporis, earum eveniet facere! Consequuntur unde doloribus rem adipisci!
+            </p>
+        </article>
+        <article id="terc">
+            <section>
+                <h2 id="section">
+                    Quer aprender mais?
+                </h2>
+                <div>
+                    <p id="div">
+                        Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
+                    </p>
+                </div>
+                <p>
+                    Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote. 
+                </p>
         </article>
     </main>
     <footer>
