--- a/desafios/desafio10-modulo2/desafio10.html
+++ b/desafios/desafio10-modulo2/desafio10.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Curiosidades da Tecnologia</h1>
-        <h4>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar</h4>
+        <h4>Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar.</h4>
         <nav>
             <a href="">Home</a>
             <a href="">Notícias</a>
@@ -65,6 +65,23 @@
                 <div>
                     <p id="div">
                         Outro assunto curioso em relação ao Android é que cada versão sempre foi nomeada em homenagem a um doce, em ordem alfabética a partir da versão 1.5 até a 9.0.
+                        <ol>
+                            <li>
+                                oi
+                            </li>
+                            <li>
+                                ola
+                            </li>
+                            <li>
+                                vem 
+                            </li>
+                        </ol>
+                    </p>
+                    <p>
+                        Infelizmente, o Android Q não existiu, pois o Google resolveu pôr fim a essa divertida prática e começou a usar numerações, o que deu origem ao Android 10.
+                    </p>
+                    <p>
+                        Acesse aqui o site Android History para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.
                     </p>
                 </div>
                 <p>
