Alinhamento em tabelas

--- a/modulo 3/ex23/tabela001.html
+++ b/modulo 3/ex23/tabela001.html
@@ -12,12 +12,15 @@
 
         table{
             width: 400px;
-            border-collapse: collapse;
+            height: 400px;
+            border-collapse: collapse; /*Juntar as linhas das células*/
         }
         
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
+            vertical-align: top; /*Alinhamento vertical das células*/
         }
     </style>
 </head>
