Aplicando efeito zebrado na tabela

--- a/modulo 3/ex23/tabela002.html
+++ b/modulo 3/ex23/tabela002.html
@@ -21,6 +21,10 @@
             background-color: grey;
             color: white;
         }
+
+        tbody > tr:nth-child(2n){ /*Efeito zebrado nas linhas (nth-child(odd)-para ordenar nas linhas ímpares, nth-child(even)-para ordenar nas linhas pares)*/
+            background-color: lightgray;
+        }
     </style>
 </head>
 <body>
